--- a/testVue/package.json
+++ b/testVue/package.json
@@ -14,7 +14,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2"
+    "iview": "^3.2.1",
+    "vue": "^2.5.2",
+    "vue-router": "^3.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
